# VulkanBoilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Vk.cpp  Vk.h  VkbpWindow.cpp  VkbpWindow.h  VulkanContext.cpp  VulkanContext.h  compile.bat  vkbp.h  vkbpDefines.cpp  vkbpDefines.h  vkbpGlobal.cpp  vkbpGlobal.h  vkbpHelpers.cpp  vkbpHelpers.h  vkbpTest.cpp  vulkanHelpers.cpp  vulkanHelpers.h  vulkanMain.cpp  vulkanStructHelpers.cpp  vulkanStructHelpers.h
meta/: cleanup.bat  compile.bat
vkbp/: CMakeLists.txt  vkbp.h
vkbp/source/: CMakeLists.txt  Vkbp.cpp  Vkbp.h  VkbpValidator.cpp  VkbpValidator.h  vkbpGlobal.cpp  vkbpGlobal.h  vkbpHelpers.cpp  vkbpHelpers.h
